--- a/index.html
+++ b/index.html
@@ -24,10 +24,11 @@
         line-height: 1.7;
       "
     >
-      <p>暑假无聊来试试，发现还挺好玩的</p>
-      <p>你们说。。。这些代码会有自己的意识吗？</p>
-      <p>如果有的话那一定很有趣吧！</p>
-      <p>忍不住化身一条固执的鱼。。。。。。</p>
+      <p>Hello,world.I'm 03.</p>
+      <p>你好,世界。我是03</p>
+      <p>这是我的第一个网页</p>
+      <p>今后我还会继续改进这个网站</p>
+      <p>敬请期待~</p>
     </div>
     <div style="background-color: #f1f1f1; text-align: center; padding: 60px">
       <img
@@ -36,7 +37,7 @@
         width="80px"
         height="80px"
       />
-      <p>html好难啊~~~</p>
+      <p>就这样了 byebye~</p>
     </div>
   </body>
 </html>
